# ChangeLog for x11-terms/rxvt
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-terms/rxvt/ChangeLog,v 1.68 2012/10/24 19:49:13 ulm Exp $

  24 Oct 2012; Ulrich Müller <ulm@gentoo.org> rxvt-2.7.10-r4.ebuild:
  Update dependency after package move from x11-libs/openmotif to
  x11-libs/motif.

  10 Oct 2010; Ulrich Mueller <ulm@gentoo.org> rxvt-2.7.10-r4.ebuild:
  Fix openmotif dependency. Change EAPI to 1.

  03 Jan 2009; Thilo Bangert <bangert@gentoo.org> -rxvt-2.7.10-r3.ebuild:
  qa: remove old version (bindnow - bug #227035)

  21 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

  05 May 2008; Brent Baude <ranger@gentoo.org> rxvt-2.7.10-r4.ebuild:
  Marking rxvt-2.7.10-r4 ppc for bug 217819

  05 May 2008; Markus Rothe <corsair@gentoo.org> rxvt-2.7.10-r4.ebuild:
  Stable on ppc64; bug #217819

  05 May 2008; Jeroen Roovers <jer@gentoo.org> rxvt-2.7.10-r4.ebuild:
  Stable for HPPA (bug #217819).

  04 May 2008; Raúl Porcel <armin76@gentoo.org> rxvt-2.7.10-r4.ebuild:
  alpha/sparc stable wrt #217819

  03 May 2008; Christian Faulhammer <opfer@gentoo.org>
  rxvt-2.7.10-r3.ebuild:
  revert stable mips keyword because of unstable dependencies

  03 May 2008; Christian Faulhammer <opfer@gentoo.org>
  rxvt-2.7.10-r4.ebuild:
  stable x86, security bug 217819

*rxvt-2.7.10-r4 (03 May 2008)

  03 May 2008; Christian Hoffmann <hoffie@gentoo.org>
  +files/rxvt-2.7.10-CVE-2008-1142-DISPLAY.patch, +rxvt-2.7.10-r4.ebuild:
  revbump to include a patch to fix CVE-2008-1142 (do not default to :0 if
  DISPLAY is unset), bug 217819; ebuild cleanups (quoting, bindnow); stable
  on amd64

  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing usata from metadata.xml as per #22931. Assigning to maintainer-needed.

  21 Sep 2007; Daniel Drake <dsd@gentoo.org> rxvt-2.7.10-r3.ebuild:
  Fix homepage at request of upstream (bug #119998)
