@@ -6,25 +6,15 @@ AUX rxvt-2.7.10-asneeded.patch 631 SHA256 a0e1c98c38affd0f1bf7275927719c488f997d
 AUX rxvt-2.7.10-azz4.diff 5072 SHA256 7add72e2b7c28b7f21c12e66a32e3434df866ae2b02b429776f37f39925a2da2 SHA512 15bffbfc82ef94a2f9c7e6d36363181c50adf3ca252b23fe5687f00c8f4358febc90230ac626de9b4225acdf500311097ca6bd166df5da9df1fa059dc6fbfc0a WHIRLPOOL dbb45754469b0c88725435e10218094abcf1a62e582a9e53a9d8de94d2acdd62f5e7c80ccd1277313d800241dbfc470515df5fe9f06bf3320de7a8ad353e8b7f
 AUX rxvt-2.7.10-line-scroll.patch 432 SHA256 4d9c73d8b7408bfe162adc87934962e7eab38be6d91952bce664498a8e3b5af5 SHA512 87df97217c75f024c7b5ade9a26034ffd5909d93481b5e11aa2e0ae007e100987d4b2140cd8ae8da499224ba2dd94bd0f445e6a4233a8deda97073fc458c345e WHIRLPOOL 2eeac53849444c0fc07ad25e496374ec75acfa28da19c6a17af388374a3291cfec5f6cafd9f8d0318286b2a19d18e54eb3f99af848e4418a920af8948958c98f
 AUX rxvt-2.7.10-rk.patch 2772 SHA256 03cd5fa32fa6cab6516a1b9d99957e1c81496849bba926414a3af1941e0deb33 SHA512 cb74e236c911ad96b80a602c2d741670ee6f74192a1e5c777789dc0d202b1518215f8dce007e2e733e0e503105077a7b55d07b2a5d922c010ebd296837f7ae0c WHIRLPOOL 5302793b919862fd5de9cf3009d137b6d9cbd1ad4084a42d4c1884221adb0e05d8cb08aa572d62850acc9bc8ff34e18316ac3fd46b4649935e900b8be7bb2e6b
-DIST rxvt-2.7.10-xim-fix.patch.gz 602 SHA256 09ba6a98927e0f60defc399acc0b0d4debfb95d69035d99c1aa779315c2573e9
-DIST rxvt-2.7.10.tar.gz 595073 SHA256 616ad56502820264e6933d07bc4eb752aa6940ec14add6e780ffccf15f38d449
-EBUILD rxvt-2.7.10-r4.ebuild 2318 SHA256 7e95d738d09dad36c314db1dadab7716c1fd2b55821185aa480a5fb11de8e607 SHA512 6926c3429812a3fe505ea686a4fcf7e6fcc1079a5f28fe1b03cea013dfa988b88100a00691c4ce3548baf9513eecf2158ea20fa7e55392c6c642d9faa61a4846 WHIRLPOOL 14a4dcb147809a53d7d6430b6d5ae0a02fb0b497e5fe32d7fe480d508b003caddf5a226d5c0f10ae56d79ebde043ef39a1870cc061aae1f83041bea93a36e9ea
-MISC ChangeLog 10475 SHA256 3262813fd80be8f28a84c6df5fcc828feb9e4bbb08109e00d22907853ee843ef SHA512 b337d6ecadfe23a7f56cbc955803339a8168db5ea618e16b74cc4f657a02126f5a3d2e9ac9a92ef8e3a2cb21a5b5b3426f3c7ed1787bc53b120e916af2ce4ce2 WHIRLPOOL 1c4c0b40d0139c0b89b52a95fc29c4a63b339437d912d53e9121ebd2a94aed496fe1efcb8d497fcfa46a7e03ec46e2f4778025968de2e308cdfe2aca280ef189
+DIST rxvt-2.7.10-xim-fix.patch.gz 602 SHA256 09ba6a98927e0f60defc399acc0b0d4debfb95d69035d99c1aa779315c2573e9 SHA512 d2d65136c7ba630157eeab8234a1d7281f0cbb77817bb86974e91cdf154a815a637d314ae8f9e5d27c8a09a3d90e6be1a28d961e0e8e4b78bf6508da4a7e32ed WHIRLPOOL c584957a76ba9b6daaffbc33f92f6815a80c51f2da2faeb3e8ef5d5615b9a8d68bb3e439483c9ebc2e7eed68f69df2e3d2f4f31fef0ed0254aba971811aba09b
+DIST rxvt-2.7.10.tar.gz 595073 SHA256 616ad56502820264e6933d07bc4eb752aa6940ec14add6e780ffccf15f38d449 SHA512 cff86c2f94c533d906b412a949fe754726a0c67d87534b8f9794080898aa20744ee5de6f9109e9de1db14291cb6de7c1c4c1944ec9192e4ea42b0a3fe598b2a1 WHIRLPOOL 5c54110bd8ab79e3d8c23c447f5fce9631a9cd2492f816a1732eb8c2aab09eb1b31f61a0a6f0cfe3a456953fc4a3819b630a513cbd4b3b9f3fa4f95d526818fb
+EBUILD rxvt-2.7.10-r4.ebuild 2350 SHA256 5708e3d29f49dbbe40e0fbf345eff0bd2d953747e200780e3001867b015bf85e SHA512 1c21c877490627e5341ff53c996629cd997bf2e0d8378e58ed1f9678cc9d041641c1c2402e96283332bbaaf39fbc2302c234726078be3abfaf9a5fb86b9be87d WHIRLPOOL 2c75fdfc50c865c5f8ce17cb617bd083d7aad807114fc2e009c88b81a558831882e77161f7cf6067b8de5d464a49709d65f6eb559f8745c52dfcc3d80d612c00
+MISC ChangeLog 10571 SHA256 9d8ad8e6c98d35f21adb107f11be5c7430965302b399b5c1fc4adb9a3c765e3b SHA512 fc1dc3fc4d4bd0ab344e74e4c1c07ad21bfd91e62fe2034cebe4fb64df34c36bd10117dd6b7a9e3e44680fe0054c3f00e0cbaa20a3872df106500e65a59ad70d WHIRLPOOL f6b3dd1e359d6d396c838c6e03acb4db82a2436fef8db2f7ec7390f010dd35c8a0d1ab37d1912198cac9d442dfb8d4b27a81dca93617fa4f31ac49881d98b4ce
 MISC metadata.xml 676 SHA256 6add43917581b9a75ec7a46ef31e0341b288ed9b4cd06b4f15ad37cbde304ea6 SHA512 43b943f7f1b9f4714172d720e88108a4fd31758d5e2cbef5107a6076ce12c62e166b3deeefbf4c928011c9f19207b8dde73236982d0a1b74f3e70be6feceaa6a WHIRLPOOL 325a5a22d8ee55445f35eaa75cef55727b4e7bae9f4a67eecaa29666c71bbcdace4e54406ba07c3d6b2f7c64d611335c12221480e5f6e4766b9b909594ec924a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJQiEZEAAoJEDxpGckxwJCBlAIQAJnFiquUl1pY//DXve0zfQx5
-ABfnlB+MTSfs77zH7j/lyrGRrC1e1W1EivSdeYBHjsr1B9JE4cau5QgHUcYN5A6Y
-kjMSCg/j/LNHXrBVywna6vcbWkdN5an/I5jvNi9jk6HIrP831ldRwBTYLIm9Pmiz
-5dW8SsSi4QOjk4YfTMSAS/53Mm8B/p4lFItv+9sNWW2egoSLE/bmoyGizoJpt9y0
-0qEAZZCZAzceWTPDxTjpNkqmcUi7y5SepgVIeFrwERNY9oO5af6A15wjOZ6lh43o
-/65zNabsOGM/ng1U+HtYbpBwoE1E42PrFN7/7EXIiDj2l6rCrvFvRT8navEzZ1N1
-vR5JC5H//gB8P+u7jyqJg/FTXneiYDTCjvwJrUPEBONgtcT43/+JgjZjbKfMXbMD
-nSr+cDBMopD2pEg1wGA4s+DhJk/MG8lLh4tJzoPvZAzY21ejh+mYLcskTpmTYzM9
-dYlceCaXQ7/Fb+FvQtjjEb0kSSNyWjtFN7bG8em/AXJkBx74pNriHOfT1/UEoOpw
-v7x/AQiG0ZWwdWHAYkXruQM+EG2ZPU65tatr0jEB0jiy5hvDvKx7dM1HsOxaf+fO
-4aosxqip6i7FbYSxzU1qWE+T7ieN2XTA2FLDl1QGx9eP11OoGxce/6SD8e2DOcET
-rb443p+jl1mYersrZ1z2
-=Da+h
+iF4EAREIAAYFAlGTg7sACgkQknrdDGLu8JCD+QD+KX4iChiMPhdXk2cJW82FZC/1
+RAnWWMONtSWqmqUwRkAA/2rXPyy+u6SNafvqPuGrpzapeC4H0GuZS9Obrj+AFITz
+=XdUq
 -----END PGP SIGNATURE-----
