@@ -1,10 +1,10 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-terms/rxvt/rxvt-2.7.10-r4.ebuild,v 1.9 2012/10/24 19:49:13 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-terms/rxvt/rxvt-2.7.10-r4.ebuild,v 1.10 2013/05/15 12:45:49 xmw Exp $
 
 EAPI=1
 
-inherit eutils flag-o-matic libtool
+inherit eutils flag-o-matic libtool toolchain-funcs
 
 DESCRIPTION="rxvt -- nice small x11 terminal"
 HOMEPAGE="http://rxvt.sourceforge.net/
@@ -27,6 +27,8 @@ DEPEND="${RDEPEND}
 src_unpack() {
 	unpack "${P}.tar.gz"
 	cd "${S}"
+
+	tc-export AR
 
 	epatch "${FILESDIR}"/${P}-line-scroll.patch
 	epatch "${FILESDIR}"/${P}-asneeded.patch
