@@ -1,6 +1,9 @@
 # ChangeLog for x11-terms/rxvt
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-terms/rxvt/ChangeLog,v 1.68 2012/10/24 19:49:13 ulm Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-terms/rxvt/ChangeLog,v 1.69 2013/05/15 12:45:49 xmw Exp $
+
+  15 May 2013; Michael Weber <xmw@gentoo.org> rxvt-2.7.10-r4.ebuild:
+  Respect AR (bug 468174)
 
   24 Oct 2012; Ulrich Müller <ulm@gentoo.org> rxvt-2.7.10-r4.ebuild:
   Update dependency after package move from x11-libs/openmotif to
